--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "@nativescript/core": "^8.3.1",
     "@nativescript/theme": "~3.0.2",
-    "nativescript-vue": "~2.9.0"
+    "nativescript-vue": "~2.9.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@nativescript/android": "8.2.4",
